# zeliard2026

./: .gitignore  README.md  SESSION_SUMMARY.md  analyze_detailed.py  decompile_log.txt  final_report.py
.claude/: settings.local.json
1_ORIGINAL_DOS/: zelres1.sar
1_OriginalGame/: README.md  zelres2.sar  zelres3.sar
2_SAR/ExtractedChunks/: README.md
2_SAR/Tools/: README.md  extract_sar.py  pack_sar.py
3_Assembly/Documentation/: COMPLETE_FILENAME_TO_CHUNK_MAP.md  GAME_ASM_FILE_REFERENCES.md  MASTER_CHUNK_FILENAME_REFERENCE.md  WHY_CONSTANTS_ARE_HARD.md  X86_EMULATION_OPTIONS.md
3_Assembly/Unicorn/: INSTALL.txt  README_NAV.md  install_and_test.bat  install_unicorn.bat  search_constants.py
3_Assembly/cutter/: export_decompiled.py  open_zeliard.bat
3_Assembly/cutter/source/rizin/examples/: meson.build
3_Assembly/cutter/source/rizin/examples/api/hash/: md5.c
3_Assembly/cutter/source/rizin/examples/api/sign/: sign_create_example.c  sign_match_example.c
3_Assembly/cutter/source/rizin/examples/api/syscall/: linux_x64.c
3_Assembly/cutter/source/rizin/librz/egg/: egg.c  egg_c_compile.c  egg_lang.c  meson.build
3_Assembly/cutter/source/rizin/librz/egg/emit/: arm.c  trace.c  x64.c  x86.c
3_Assembly/cutter/source/rizin/librz/mark/: mark.c  meson.build  serialize_mark.c
3_Assembly/cutter/source/rizin/librz/search/: README.md  bytepat.c  bytes_search.c  collection.c  cryptographic_search.c  cryptographic_search_aes.c  cryptographic_search_pki.c  cryptographic_search_sm4.c  cryptographic_search_x509.c  entropy_search.c  hash_search.c  keyword.c  magic_search.c  meson.build  options.c  regexp.c  search.c  search_internal.h  string_search.c  value_search.c
3_Assembly/cutter/source/rizin/subprojects/rzheap/: meson.build
3_Assembly/cutter/source/rizin/subprojects/rzheap/glibc-config-extractor/: extract_glibc_layouts.c  extract_glibc_structs.py  meson.build  meson_options.txt
3_Assembly/cutter/source/rizin/subprojects/rzheap/jemalloc-config-extractor/: .gitignore  extract_config_450.c  extract_config_530.c  meson.build  meson_options.txt
3_Assembly/cutter/source/rizin/subprojects/rzheap/rz_glibc/: glibc_parser.h  glibc_types.h  glibc_versions.h
3_Assembly/cutter/source/rizin/subprojects/rzheap/rz_jemalloc/: jemalloc_450.h  jemalloc_530.h  jemalloc_arch.h
3_Assembly/cutter/source/rizin/test/bench/: bench_bitvector.c  bench_il.c  bench_utils.c  bench_utils.h  meson.build
3_Assembly/cutter/source/rizin/test/unit/: meson.build  test_analysis_block.c  test_analysis_block_invars.inl  test_analysis_cc.c  test_analysis_coverage.c  test_analysis_function.c  test_analysis_hints.c  test_analysis_meta.c  test_analysis_op.c  test_analysis_var.c  test_analysis_xrefs.c  test_base16.c  test_base32.c  test_base36.c  test_base85.c  test_bin_mach0.c  test_bits.c  test_bitvector.c  test_cmd.c  test_cons.c  test_cons_bar.c  test_cons_canvas.c  test_cons_grep.c  test_cons_histogram.c  test_cons_html.c  test_cons_hud.c  test_cons_line.c  test_cons_pager.c  test_cons_pal.c  test_cons_pipe.c  test_cons_rgb.c  test_core_addr.c  test_core_bin.c  test_core_cmd.c  test_debug.c  test_debug_session.c  test_encodings.c  test_endian.c  test_flirt.c  test_float.c  (+39 more)
3_Assembly/ndisasm/: README.md
3_Assembly/tasm/: extract_chunk_filenames.py  find_filenames.py  parse_game_filenames.py
4_ASSEMBLY_DISASSEMBLY/: game_disassembly.asm
4_ASSEMBLY_DISASSEMBLY/assembly_output/: stick.asm
4_Resources/GameData/: GAME_DATA_REFERENCE.md  GAME_SYSTEMS.md  ITEMS_DATABASE.md
4_Resources/GrpViewer/: GrpViewer_052_main.py  edit_logic.py  file_logic.py  info_logic.py  render_logic.py  tile_logic.py  view_logic.py  zx0_Duke_16x16.grp  zx1_Duke Holding Up_16x16.grp  zx3_Caven1.grp
4_Resources/Maps/: README.md  readme.txt
4_Resources/Music/: README.md  info.txt
5_MonoGame/BuildScripts/: README.md
5_MonoGame/Documentation/: IMPLEMENTATION_STATUS.md
5_MonoGame/MONOGAME_AUTHENTIC/: .gitignore  Program.cs  SAVED_FOLDER_UPDATE.md  ZeliardAuthentic.csproj  test_decompress.sh
5_SCRIPTS_AND_TOOLS/scripts/: ExportAssembly.java  ExportDecompiledC.java  ExportDecompiledC.py  analyze_chunks.ps1  analyze_results.ps1  decompile_all.ps1  decompile_chunks.bat  decompile_simple.ps1  disassemble_all.bat  disassemble_all_complete.bat  disassemble_code_only.bat  export_all_assembly.bat  export_assembly.py  extract_sar.ps1  game.bat  package_source.ps1  rename_folders.bat  reorganize.bat  setup_compilation.ps1  test_ndisasm.bat  test_rle.ps1
6_DOCUMENTATION/: ASSEMBLY_ONLY_GUIDE.md  ASSEMBLY_REFERENCE_GUIDE.md  BOSSES_DATABASE.md  CHUNK_GUIDE.md  CONSTANT_EXTRACTION_STATUS.md  DECOMPILATION_REPORT.md  ENEMIES_DATABASE.md  EXECUTION_FLOW_MAP.md  GAMEPLAY_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  INDEX.md  INVESTIGATION_RESULTS.md  MASTER_CONVERSION_PLAN.md  MONOGAME_IMPLEMENTATION_PLAN.md  NEW_STRUCTURE.md  OPENING_SCENE_ANALYSIS.md  PHYSICS_CONSTANTS.md  QUICK_REFERENCE_ARCHITECTURE.md  README.md  README_ASSEMBLY_WORKFLOW.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  SAVE_FILE_FORMAT.md  TITLE_LOGO_RENDERING.md  TOWNS_AND_NPCS.md
6_DOCUMENTATION/02_GAME_ENGINE/: code_chunks_overview.md
6_DOCUMENTATION/03_GRAPHICS_SYSTEM/: palette_system.md
6_DOCUMENTATION/04_SPRITE_SYSTEM/: pixel_formats.md
6_DOCUMENTATION/08_ASSEMBLY_REFERENCE/: key_patterns.md
6_DOCUMENTATION/GAME_ENGINE/: game_bin_walkthrough.md  gmega_walkthrough.md  gmmcga_walkthrough.md  gmtga_walkthrough.md  stdply_walkthrough.md  stick_walkthrough.md
6_DOCUMENTATION/archive/: ASSEMBLY_DISASSEMBLY_PLAN.md  CHUNK_ANALYSIS.md  CHUNK_REFERENCE_MAP.md  DOCUMENTATION_AUDIT.md  EXECUTABLE_VS_DATA_CHUNKS.md  PROJECT_OVERVIEW.md
MONOGAME_AUTHENTIC/: BUILD.md  Game1.cs  PROJECT_STATUS.md  Program.cs  README.md  README_SAVELOAD.md  SETUP.md  TITLE_LOGO_IMPLEMENTATION.md  ZeliardAuthentic.csproj
MONOGAME_AUTHENTIC/Combat/: CombatSystem.cs
MONOGAME_AUTHENTIC/Content/: Content.mgcb
MONOGAME_AUTHENTIC/Core/: AnimationPlayer.cs  DOSPalette.cs  (+7 more)
Tools/: INSTALL_PYTHON.md  README.md  SETUP_GUIDE.md  extract_constants.py  run_extraction.bat
(+2651 files in other folders)
